Incorporating review feedback - fixed alignment issues, rendered the git URL for mirrored repo, and use timeago to display when mirroring last happened.

--- a/perforce_swarm/app/assets/stylesheets/application.scss
+++ b/perforce_swarm/app/assets/stylesheets/application.scss
@@ -36,3 +36,7 @@ ul.sidebar-subnav i.fa-helix-icon-white {
   width: 8px !important;
   margin-left: 3px;
 }
+
+ul.sidebar-subnav span.helix-mirroring-item {
+  padding-left: 4px;
+}
